// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IntegrationsListRow should display an external integration 1`] = `
<a
  class="component link card d-flex flex-row align-items-center"
  to="/app/settings/integrations/app/420"
>
  <div
    class="icon d-flex align-items-center justify-content-center"
  >
    <img
      alt="an integration logo"
      class="logo"
      role="presentation"
      src="ok.png"
    />
  </div>
  <div
    class="flex-grow mr-1"
  >
    <div
      class="d-flex align-items-start"
    >
      <h5
        class="title"
      >
        an integration
      </h5>
    </div>
    this is a cool integration
  </div>
  <div>
    <div
      class="action"
    >
      <i
        class="material-icons md-1"
      >
        navigate_next
      </i>
    </div>
  </div>
</a>
`;

exports[`IntegrationsListRow should display an integration with upgrade requirement 1`] = `
<div
  class="component card d-flex flex-row align-items-center"
>
  <div
    class="icon d-flex align-items-center justify-content-center"
  >
    <img
      alt="an integration logo"
      class="logo"
      role="presentation"
      src="test-file-stub"
    />
  </div>
  <div
    class="flex-grow mr-1"
  >
    <div
      class="d-flex align-items-start"
    >
      <h5
        class="title"
      >
        an integration
      </h5>
      <div
        class="ml-3 py-0 px-1"
      >
        <div
          class="d-flex align-items-center upgradeLink"
        >
          <a
            to="[object Object]"
          >
            <button
              class="wrapper fill primary small"
              type="button"
            >
              <span
                class="wrapper"
              >
                Upgrade
                <i
                  class="material-icons icon isRight small"
                >
                  auto_awesome
                </i>
              </span>
            </button>
          </a>
        </div>
      </div>
    </div>
    this is a cool integration
  </div>
</div>
`;

exports[`IntegrationsListRow should display the integration row as a link 1`] = `
<a
  class="component link card d-flex flex-row align-items-center"
  to="/app/settings/integrations/http"
>
  <div
    class="icon d-flex align-items-center justify-content-center"
  >
    <img
      alt="an integration logo"
      class="logo"
      role="presentation"
      src="test-file-stub"
    />
  </div>
  <div
    class="flex-grow mr-1"
  >
    <div
      class="d-flex align-items-start"
    >
      <h5
        class="title"
      >
        an integration
      </h5>
    </div>
    this is a cool integration
  </div>
  <div>
    <div
      class="action"
    >
      <span
        class="count"
      >
        1
         active
      </span>
      <i
        class="material-icons md-1"
      >
        navigate_next
      </i>
    </div>
  </div>
</a>
`;
